@@ -6095,12 +6095,6 @@ http://www.htdig.org/
 				document$(PLURAL_MATCHES) were found"
 			  </dd>
 			  <dt>
-				MAX_MATCHES
-			  </dt>
-			  <dd>
-				The number of maximum displayed matches.
-			  </dd>
-			  <dt>
 				MAX_STARS
 			  </dt>
 			  <dd>
@@ -6221,12 +6215,6 @@ http://www.htdig.org/
 				else it is an empty string. This can be used to say
 				something like "$(MATCHES)
 				document$(PLURAL_MATCHES) were found"
-			  </dd>
-			  <dt>
-				MAX_MATCHES
-			  </dt>
-			  <dd>
-				The number of maximum displayed matches.
 			  </dd>
 			  <dt>
 				MAX_STARS
@@ -8661,7 +8649,7 @@ http://www.htdig.org/
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 <!-- hhmts start -->
-Last modified: Fri Oct 29 17:13:16 CDT 1999
+Last modified: Wed Nov 10 15:09:48 CST 1999
 <!-- hhmts end -->
   </body>
 </html>
